--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,12 @@
 # Vahan-Insight: Indian Vehicle Registration Analysis
-# Phases 1-3: Data Engineering & EV Analysis Dependencies
+# Phases 1-4: Data Engineering, EV Analysis & ML Dependencies
 
 # Kaggle API for dataset download
 kaggle>=1.5.16
 
 # Data manipulation and analysis
 pandas>=2.0.0
+numpy>=1.24.0
 
 # Environment variable management
 python-dotenv>=1.0.0
@@ -22,7 +23,6 @@ kaleido>=0.2.1
 streamlit>=1.30.0
 streamlit-folium>=0.15.0
 
-# Future phases will add:
-# - prophet, xgboost, scikit-learn (ML)
-# - fastapi, uvicorn (API)
-# - langchain, openai (Gen AI)
+# Machine Learning (Phase 4)
+xgboost>=2.0.0
+scikit-learn>=1.3.0
